<resources>
    <string name="app_name">VirtualGDTA</string>
    <string name="app_nick">Virtual GDTA</string>


    <string name="title_activity_mob">MobActivity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <!--
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    -->

    <string name="interstitial_ad_unit_id">ca-app-pub-3659865333359659/1211350924</string>
    <string name="banner_ad_unit_id">ca-app-pub-3659865333359659/4245542528</string>

    <string name="strProyecto">Virtual GDTA</string>
    <string name="strDescripcion">Virtual Graphic Digitizing Table Android</string>
    <string name="strConectate">Please enter the server IP to continue</string>

    <string name="strConectar">Connect</string>
    <string name="strDesconectar">Disconnect</string>
    <string name="strDibujo">Draw</string>
    <string name="strAyuda">Help</string>


</resources>
