<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chucuaz.android.VirtualGDT.MainActivity"
    android:background="@color/material_deep_teal_500">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblVirtualGDT"
        android:text="@string/strProyecto"
        android:enabled="true"
        android:textSize="55dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strConectar"
        android:id="@+id/btnConectar"
        android:textSize="30dp"
        android:layout_above="@+id/btnAyuda"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAyuda"
        android:id="@+id/btnAyuda"
        android:layout_marginBottom="37dp"
        android:textSize="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnConectar"
        android:layout_alignStart="@+id/btnConectar"
        android:layout_alignRight="@+id/btnConectar"
        android:layout_alignEnd="@+id/btnConectar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDescripcion"
        android:id="@+id/lblDescripcion"
        android:layout_below="@+id/lblVirtualGDT"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/semaforo_rojo"
        android:layout_alignTop="@+id/btnConectar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <FrameLayout
        android:layout_width="200px"
        android:layout_height="300px"
        android:layout_marginTop="40dp"
        android:id="@+id/frameIP"
        android:layout_below="@+id/lblDescripcion"
        android:visibility="visible"
        android:background="#d2be5b"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:id="@+id/lblConectar"
            android:layout_below="@+id/lblVirtualGDT"
            android:layout_centerHorizontal="true"
            android:text="@string/strConectate"
            android:gravity="bottom|center_horizontal"
            android:textSize="16dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:transitionGroup="false"
            android:touchscreenBlocksFocus="false"
            android:textAlignment="center"
            android:id="@+id/layIP"
            android:gravity="center">

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtIP1"
                android:background="#ffffff"
                android:layout_below="@+id/frameIP"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:gravity="center" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="37dp"
                android:layout_below="@+id/lblVirtualGDT"
                android:layout_centerHorizontal="true"
                android:text="."
                android:gravity="bottom|center_horizontal"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtIP2"
                android:background="#ffffff"
                android:layout_below="@+id/frameIP"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:gravity="center" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="37dp"
                android:layout_below="@+id/lblVirtualGDT"
                android:layout_centerHorizontal="true"
                android:text="."
                android:gravity="bottom|center_horizontal"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtIP3"
                android:background="#ffffff"
                android:layout_below="@+id/frameIP"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:gravity="center" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="37dp"
                android:layout_below="@+id/lblVirtualGDT"
                android:layout_centerHorizontal="true"
                android:text="."
                android:gravity="bottom|center_horizontal"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtIP4"
                android:background="#ffffff"
                android:layout_below="@+id/frameIP"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignEnd="@+id/imageView"
                android:gravity="center" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
